--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     annotationProcessor 'com.jakewharton:butterknife:6.1.0'
     implementation 'com.jakewharton:butterknife:6.1.0'
+    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
 }
